--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "scripts": {
     "start": "node index.js"
   },
-  "dependencies": {
-    "express": "^4.18.2",
-    "ua-parser-js": "^1.0.2",
-    "node-fetch": "^2.6.1"
-  }
+ "dependencies": {
+  "express": "^4.18.2",
+  "ua-parser-js": "^1.0.2"
 }
+  }
+
